Prevent this from wrapping

--- a/src/components/status.css
+++ b/src/components/status.css
@@ -201,6 +201,7 @@
   text-transform: uppercase;
   box-shadow: 0 0 0 2px var(--bg-color), 0 0 10px var(--bg-color),
     0 0 10px var(--bg-color), 0 0 10px var(--bg-color);
+  white-space: nowrap;
 }
 .timeline-deck .status .content.truncated:hover:after {
   border-color: var(--link-color);
